<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mid_gray">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/mid_gray"
                android:contentDescription="@string/poster_cover"
                app:layout_constraintBottom_toTopOf="@+id/plot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/favorite_star"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/no_data"
                app:layout_constraintBottom_toTopOf="@+id/vote_descr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.53"
                app:srcCompat="@drawable/fav_star"/>

            <ImageView
                android:id="@+id/animate_star"
                android:alpha="0.0"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/no_data"
                app:layout_constraintBottom_toTopOf="@+id/vote_descr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.53"
                app:srcCompat="@drawable/fav_star"/>

            <TextView
                android:id="@+id/vote_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_desc"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/vote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_image"/>


            <TextView
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/main_color_light"
                android:textSize="55sp"
                app:layout_constraintBottom_toTopOf="@+id/release_descr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_image"/>

            <TextView
                android:id="@+id/release_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/release_desc"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/release"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_image"/>

            <TextView
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="8dp"
                android:text="@string/no_data"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/poster_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_image"/>

            <TextView
                android:id="@+id/plot"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_data"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster_image"/>

            <ImageView
                android:id="@+id/divider1"
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="19dp"
                android:background="@color/main_color_light"
                android:contentDescription="@string/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plot"/>

            <TextView
                android:id="@+id/rewiews_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/reviews"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1"/>

            <LinearLayout
                android:id="@+id/reviews_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rewiews_title"/>

            <ImageView
                android:id="@+id/divider2"
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/main_color_light"
                android:contentDescription="@string/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_layout"/>

            <TextView
                android:id="@+id/trailers_title"
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/trailers"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"/>

            <include
                android:id="@+id/trailers_layout"
                layout="@layout/trailer_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_title"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/no_internet_conn"
        android:visibility="invisible"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/no_connection"/>
</android.support.constraint.ConstraintLayout>
